=================================
2008-10-29T16:19:41.680362Z v1_01
=================================

  2008-10-29 16:18:54 (r68) by rcaputo; DNS.pm M

    New version.

  2008-10-15 03:18:31 (r67) by rcaputo; t/06_hosts.t M

    Accommodate DNS change for poe.perl.org in the tests.

  2008-03-24 17:33:22 (r66) by rcaputo; t/06_hosts.t M

    Apply Martin Ferrari's patch to skip network tests if there's no
    detectable network. Resolves rt.cpan.org ticket 33677. 

==============
End of Excerpt
==============