@@ -1,16 +1,22 @@
 --- #YAML:1.0
-name:                POE-Component-Client-DNS
-version:             1.01
-abstract:            Non-blocking/concurrent DNS queries using Net::DNS and POE
-license:             perl
-author:              
+name:               POE-Component-Client-DNS
+version:            1.02
+abstract:           Non-blocking/concurrent DNS queries using Net::DNS and POE
+author:
     - Rocco Caputo <rcaputo@cpan.org>
-generated_by:        ExtUtils::MakeMaker version 6.44
-distribution_type:   module
-requires:     
-    Net::DNS:                      0.59
-    POE:                           0.31
-    Test::More:                    0
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Net::DNS:    0.59
+    POE:         0.31
+    Test::More:  0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
