@@ -1,4 +1,13 @@
 =================================
+2009-01-13T20:18:27.751944Z v1_02
+=================================
+
+  2009-01-13 20:08:27 (r70) by rcaputo; DNS.pm M; t/06_hosts.t M
+
+    A host-file test was failing because its address segments were wider
+    than single octets. 
+
+=================================
 2008-10-29T16:19:41.680362Z v1_01
 =================================
 
